# produhacks-2026

./: .env.example  .gitignore  BACKEND_CONTEXT.md  MINIMAL_BACKEND_DRAFT.md  README.md  app.db  features_plan.md  integration-context.md  pyproject.toml
agent_service/: main.py
api_service/: __init__.py  agent_planner.py  config.py  context_token.py  database.py  generation.py  main.py  models.py  requirements.txt  schemas.py
db/: schema.sql
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: ModelLibrary.css  ModelLibrary.jsx  ModelViewer.jsx  PromptInput.jsx  SketchCanvas.jsx
