[project]
name = "produhacks-2026"
version = "0.1.0"
description = "Minimal Sketch2Mesh backend"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "python-multipart==0.0.22",
  "pydantic==2.10.4",
  "SQLAlchemy==2.0.36",
  "psycopg[binary]>=3.2,<4",
  "httpx==0.28.1",
  "supabase>=2.7,<3",
  "python-dotenv==1.0.1",
]
agent = [
  "uagents",
]

[tool.uv]
package = false
